@@ -1,7 +1,7 @@
 #!/usr/bin/perl
 
 use strict;
-use Test::More tests => 16;
+use Test::More tests => 17;
 use FindBin qw($Bin);
 use lib "$Bin/lib";
 use MemcachedTest;
@@ -30,14 +30,17 @@ is(scalar <$sock>, "0\r\n", "- 9 = 0");
 print $sock "decr num 5\r\n";
 is(scalar <$sock>, "0\r\n", "- 5 = 0");
 
-print $sock "incr num ".(2**32-2)."\r\n";
-is(scalar <$sock>, (2**32-2)."\r\n", "+ ".(2**32-2)." = ".(2**32-2));
+printf $sock "set num 0 0 10\r\n4294967296\r\n";
+is(scalar <$sock>, "STORED\r\n", "stored 2**32");
 
 print $sock "incr num 1\r\n";
-is(scalar <$sock>, (2**32-1)."\r\n", "+ 1 = ".(2**32-1));
+is(scalar <$sock>, "4294967297\r\n", "4294967296 + 1 = 4294967297");
+
+printf $sock "set num 0 0 %d\r\n18446744073709551615\r\n", length("18446744073709551615");
+is(scalar <$sock>, "STORED\r\n", "stored 2**64-1");
 
 print $sock "incr num 1\r\n";
-is(scalar <$sock>, "0\r\n", "+ 1 = 0");
+is(scalar <$sock>, "0\r\n", "(2**64 - 1) + 1 = 0");
 
 print $sock "decr bogus 5\r\n";
 is(scalar <$sock>, "NOT_FOUND\r\n", "can't decr bogus key");
